--- a/examples/app-demo/package.json
+++ b/examples/app-demo/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-strip-types src/index.ts"
+  },
+  "dependencies": {
+    "express": "^4.19.0"
   }
 }
-
