--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
   "scripts": {
     "start": "node --experimental-strip-types src/server.ts",
     "proxyglassctl": "node --experimental-strip-types src/cli/proxyglassctl.ts",
-    "test": "node --test --experimental-strip-types tests/*.test.ts"
+    "test": "vitest run",
+    "test:watch": "vitest"
+  },
+  "dependencies": {
+    "prom-client": "^15.1.0"
+  },
+  "devDependencies": {
+    "vitest": "^2.1.0",
+    "typescript": "^5.7.0"
   },
   "engines": {
     "node": ">=22"
